Bug 1573728 - Port Bug 460146 "CSS3 border-image images should appear in Page Info -> Media" and Bug 377364 "Page Info: Suppress the jumping in the bottom half of the Media tab" to SeaMonkey. r=frg

--- a/suite/themes/modern/navigator/pageInfo.css
+++ b/suite/themes/modern/navigator/pageInfo.css
@@ -53,6 +53,14 @@ textbox[disabled] {
   min-height: 10em;
 }
 
+#mediaGrid {
+  min-height: 9em;
+}
+
+#mediaLabelColumn {
+  min-width: 10em;
+}
+
 #thepreviewimage {
   margin: 1em;
 }
